--- a/notebooks/pco_develop.ipynb
+++ b/notebooks/pco_develop.ipynb
@@ -81,38 +81,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<ipython-input-6-65649a1513e7>, line 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-65649a1513e7>\"\u001b[1;36m, line \u001b[1;32m18\u001b[0m\n\u001b[1;33m    return [dwExposure.value, self.time_modes[wTimeBaseExposure.value]]\u001b[0m\n\u001b[1;37m                                                                       ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[][sdk] open_camera: OK.\n",
+      "[][sdk] get_recording_state: OK.\n",
+      "[][sdk] reset_settings_to_default: OK.\n",
+      "[][sdk] set_bit_alignment: OK.\n",
+      "[][sdk] arm_camera: OK.\n"
      ]
     }
    ],
    "source": [
-    " def pco_get_exposure_time(hCam):\n",
-    "    \"\"\"\n",
-    "    Get exposure time of the camera.\n",
-    "    :return: exposure time, units\n",
-    "    \"\"\"00\n",
-    "    # pass values to ctypes variables\n",
-    "    dwDelay = ctypes.c_uint32(0)\n",
-    "    dwExposure = ctypes.c_uint32(0)\n",
-    "    wTimeBaseDelay = ctypes.c_uint16(0)\n",
-    "    wTimeBaseExposure = ctypes.c_uint16(0)\n",
+    "import pco\n",
+    "exposure = 15 # ms\n",
+    "binning = 4\n",
     "\n",
-    "    # get exposure time\n",
-    "    pco_dll.PCO_GetDelayExposureTime(hCam, ctypes.byref(dwDelay),\n",
-    "                                            ctypes.byref(dwExposure),\n",
-    "                                            ctypes.byref(wTimeBaseDelay),\n",
-    "                                            ctypes.byref(wTimeBaseExposure))\n",
+    "cam = pco.camera(debuglevel = 'verbose')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[][sdk] set_binning: OK.\n",
+      "[][sdk] set_delay_exposure_time: OK.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cam.sdk.set_binning('{0}x{0}'.format(binning))\n",
+    "cam.set_exposure_time(exposure_time= exposure*1.e-3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[][sdk] get_binning: OK.\n",
+      "[][sdk] close_camera: OK.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cam.sdk.get_binning()\n",
+    "cam.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[][rec] stop_record: OK.\n",
+      "[][rec] delete: OK.\n",
+      "[][sdk] close_camera: SDK DLL error a00a3002 at device 'camera sdk dll': Handle is invalid.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'exception' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-83df278e5065>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pco\\camera.py\u001b[0m in \u001b[0;36mclose\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    185\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    186\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 187\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msdk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose_camera\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    188\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msdk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexception\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    189\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pco\\sdk.py\u001b[0m in \u001b[0;36mclose_camera\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    133\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf_code\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mco_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    134\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 135\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mexception\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf_code\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mco_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    136\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    137\u001b[0m     \u001b[1;31m# -------------------------------------------------------------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'exception' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pco.sdk import sdk\n",
+    "dll = sdk()\n",
+    "# cam = dll.open_camera()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdk.get_sizes??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pco\n",
+    "from pco.recorder import recorder\n",
+    "import cv2\n",
+    "# cam = pco.camera(debuglevel = 'verbose')\n",
+    "# cam.record(10,'ring buffer')\n",
     "\n",
-    "    return [dwExposure.value, self.time_modes[wTimeBaseExposure.value]]\n",
-    "pco_get_exposure_time(hCam)"
+    "dll.set_image_parameters??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    img,meta = cam.image(0xFFFFFFFF)\n",
+    "    cv2.imshow('etst',img)\n",
+    "    \n",
+    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "        break\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[][sdk] set_binning: OK.\n",
+      "[][sdk] get_sizes: OK.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'wXResAct': 2560, 'wXResMax': 2560, 'wYResAct': 2160, 'wYResMax': 2160}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cam.sdk.set_binning('{0}x{0}'.format(4))\n",
+    "cam.sdk.get_sizes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdk.\n",
+    "sdk.set_binning('{0}x{0}'.format(4))\n",
+    "sdk.get_sizes()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[][sdk] set_binning: SDK DLL error a00a3002 at device 'camera sdk dll': Handle is invalid.\n"
+     ]
+    },
+    {
+     "ename": "exception",
+     "evalue": "Exception: set_binning a00a3002",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mexception\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-b34f99922d97>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msdk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_binning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'4x4'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pco\\sdk.py\u001b[0m in \u001b[0;36mset_binning\u001b[1;34m(self, binning)\u001b[0m\n\u001b[0;32m   1327\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf_code\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mco_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart_time\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1328\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1329\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexception\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getframe\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf_code\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mco_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1330\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1331\u001b[0m     \u001b[1;31m# -------------------------------------------------------------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mexception\u001b[0m: Exception: set_binning a00a3002"
+     ]
+    }
+   ],
+   "source": [
+    "cam.sdk.set_binning('4x4')"
    ]
   }
  ],
@@ -132,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
