Fixed typo in the comments of the notebook.

--- a/notebooks/FLIR_led_sync_test_daq_pco.ipynb
+++ b/notebooks/FLIR_led_sync_test_daq_pco.ipynb
@@ -5,17 +5,16 @@
    "id": "7dfa1afc-c3cb-460f-a34b-0f13af660026",
    "metadata": {},
    "source": [
-    "### Sync timing on the Chameleon 3 cameras\n",
+    "### Sync timing on the Chameleon 3 cameras with PCO and NIDAQ load\n",
     "\n",
-    "This test was performed on:\n",
+    "This test was performed the following system:\n",
     " - Intel(R) Core(TM) i5-9600K CPU @ 3.70GHz\n",
     " - 32 Gb memory\n",
-    " - GeForce GTX 1030 (not used)\n",
-    " - 500Gb NVME (OS) streaming to an SSD\n",
-    " - Ubuntu 20.04.2 LTS\n",
+    " - GeForce GTX 1030 (not used, encoding using the CPU)\n",
+    " - Windows\n",
     "\n",
     "Running **1 CM3 cameras at 30 Hz with 5ms exposure time**; running a **NI USB-6361** at 10kHz sampling 2 analog channels and a **PCO edge 5.5**. \n",
-    "An LED is connected to a TTL and placed in front of the cameras and plugged to **line2**, the TTL flashes for **50ms**.\n",
+    "An LED is connected to a TTL and placed in front of the cameras and plugged to **line2**, the TTL flashes for **500ms**.\n",
     "\n",
     "The ``default.json`` file is:\n",
     "\n",
@@ -135,9 +134,7 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "9095383b-8856-495d-9fcb-38bcbb07d1d9",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -201,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
